udpated raytracer images

--- a/projects/raytracer.html
+++ b/projects/raytracer.html
@@ -120,6 +120,14 @@
 
                                             <p>Sample images produced by the raytracer:</p>
 
+                                            <img src="../images/projects/raytracer/chess.png" alt="" class="project-media">
+
+                                            <img src="../images/projects/raytracer/recursivespheres.png" alt="" class="project-media">
+
+                                            <img src="../images/projects/raytracer/purpleinspace.png" alt="" class="project-media">
+
+                                            <img src="../images/projects/raytracer/mirrorballs.png" alt="" class="project-media">
+
                                         </div>
                                     </div>
                                 </div>
