--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                                 New Jersey at Brown University working towards my Bachelor of Science
                                                 degree in computer science with an intended focus in Visual Computing
                                                 and Artificial Intelligence/Machine Learning. At Brown, I am currently a
-                                                reserach assistant in the Dash project group.</p>
+                                                research assistant in the Dash project group.</p>
 
                                             <p>My interests include computer graphics, animation, and UI/UX design. In
                                                 my free time I enjoy playing the violin, drawing, and playing strategy
