--- a/projects/cartoonworld.html
+++ b/projects/cartoonworld.html
@@ -104,7 +104,7 @@
 
                                             <span>Features:</span>
                                             <ul>
-                                                <li>Stylized rendering in a cell shader style using a simplified lighting model</li>
+                                                <li>Stylized rendering in a cell shader style using a custom lighting model</li>
                                                 <li>Variable ink drawing style outlines generated using silhouette detection</li>
                                                 <li>Multiple types of terrain generation using value noise and Fractional Brownian Motion</li>
                                                 <li>Pseudo randomly generated trees dispered throughout terrain created by combining custom primitive meshes</li>
