--- a/projects/dashstarter.html
+++ b/projects/dashstarter.html
@@ -117,7 +117,7 @@
                                             </p>
 
                                             <p>
-                                                To learn more about Dash visit our <a href="" target="_blank">documentation site.</a>
+                                                To learn more about Dash visit our <a href="https://brown-dash.github.io/Dash-Documentation/" target="_blank">documentation site.</a>
                                             </p>
 
                                         </div>
