--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
                                 data-animate-effect="fadeInLeft">
                                 <span class="heading-meta">My Specialty</span>
                                 <h2 class="colorlib-heading animate-box">My Skills</h2>
+                                <p>Currently learning: C, Blender, Computer Vision</p>
                             </div>
                         </div>
+                        
                         <div class="row">
                             <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                 <div class="progress-wrap">
