updated descriptions to match resume

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <p>Currently learning: C, Blender, Computer Vision</p>
                             </div>
                         </div>
-                        
+
                         <div class="row">
                             <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                 <div class="progress-wrap">
@@ -257,7 +257,8 @@
                                                                     <br />GPA: 4.0/4.0</strong></p>
                                                         </div>
                                                         <div class="col-md-6">
-                                                            <p>Relevant coursework: Intro to Computer Graphics, Intro to
+                                                            <p>Relevant coursework: Intro to Computer Graphics, Computer
+                                                                Vision, Fundamentals of Computer Systems, Intro to
                                                                 Algorithms and Data Structures, Intro to Object-Oriented
                                                                 Programming, Intro to Discrete Structures and
                                                                 Probability, Linear Algebra, Statistical Inference I,
@@ -320,13 +321,14 @@
                                                 <h3>Brown University Visual Computing Group <span>Providence, RI</span>
                                                 </h3>
                                                 <p>
-                                                    Worked as a member of the Dash project team under the management of
+                                                    Working as a member of the Dash project team under the management of
                                                     Professor Andy van Dam, building a browser-based hypermedia system
                                                     using the MERN stack with TypeScript and MobX <br />
-                                                    Overhauled previous temporal media capabilities and added new
-                                                    audio/video features for more precise editing and playback <br />
-                                                    Maintained existing system and executed UI and usability
-                                                    improvements <br />
+                                                    Currently leading a team of research assistants in developing more
+                                                    efficient note-taking capabilities and workflow <br />
+                                                    During past semesters, overhauled existing audio/video capabilities,
+                                                    executed UI changes and performed user testing
+                                                    <br />
                                                     For more information about Dash visit <a
                                                         href="https://brown-dash.github.io/Dash-Documentation/"
                                                         target="_blank">this website</a>
