--- a/projects/cartoonworld.html
+++ b/projects/cartoonworld.html
@@ -59,7 +59,7 @@
                 aria-expanded="false" aria-controls="navbar"><i></i></a>
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                 <div class="text-center">
-                    <div class="author-img" style="background-image: url(../images/about.jpg);"></div>
+                    <div class="author-img" style="background-image: url(../images/about.JPG);"></div>
                     <h1 id="colorlib-logo"><a href="../index.html">Mehek Jethani</a></h1>
                     <span class="position"><a style="cursor: text;">Research Assistant</a> at Brown University</span>
                 </div>
