--- a/projects/pixardemo.html
+++ b/projects/pixardemo.html
@@ -98,11 +98,26 @@
                                             <h2 class="colorlib-heading project-title">Demo Reel</h2>
                                             <span class="heading-meta project-date">Pixar Undergraduate Program 2022</span>
 
-                                            <p>Thank you for watching!</p>
-
                                             <div class="video-wrapper">
                                                 <iframe src="https://www.youtube.com/embed/ZfzbWNiV--w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                             </div>
+
+                                            <p>
+                                                To view code samples visit my GitHub: <a href="https://github.com/mehekj">https://github.com/mehekj</a>
+                                                <br />
+
+                                                Projects:
+                                                00:00 - Introduction
+                                                00:06 - Cartoon World
+                                                00:38 - Raytracer
+                                                01:17 - Machine Learning Flappy Bird
+                                                01:54 - Donut animation
+                                                02:09 - Space textures project
+
+                                                <br />
+
+                                                Thank you for watching!
+                                            </p>
 
                                         </div>
                                     </div>
