--- a/projects/pixardemo.html
+++ b/projects/pixardemo.html
@@ -104,17 +104,17 @@
 
                                             <p>
                                                 To view code samples visit my GitHub: <a href="https://github.com/mehekj">https://github.com/mehekj</a>
-                                                <br />
+                                                <br /><br />
 
-                                                Projects:
-                                                00:00 - Introduction
-                                                00:06 - Cartoon World
-                                                00:38 - Raytracer
-                                                01:17 - Machine Learning Flappy Bird
-                                                01:54 - Donut animation
-                                                02:09 - Space textures project
+                                                Projects: <br />
+                                                00:00 - Introduction <br />
+                                                00:06 - Cartoon World <br />
+                                                00:38 - Raytracer <br />
+                                                01:17 - Machine Learning Flappy Bird <br />
+                                                01:54 - Donut animation <br />
+                                                02:09 - Space textures project <br />
 
-                                                <br />
+                                                <br /><br />
 
                                                 Thank you for watching!
                                             </p>
