--- a/projects/pixardemo.html
+++ b/projects/pixardemo.html
@@ -112,7 +112,7 @@
                                                 00:38 - Raytracer <br />
                                                 01:17 - Machine Learning Flappy Bird <br />
                                                 01:54 - Donut animation <br />
-                                                02:09 - Space textures project <br />
+                                                02:09 - Space textures project
 
                                                 <br /><br />
 
