added cv project

--- a/index.html
+++ b/index.html
@@ -445,6 +445,19 @@
                         <div class="row">
                             <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                 <div class="project"
+                                    style="background-image: url(images/projects/cvchess/thumbnail.png);">
+                                    <div class="desc">
+                                        <div class="con">
+                                            <h3><a href="projects/cvchess.html">Chess Board Recognizer</a></h3>
+                                            <span>Computer Vision Project</span>
+                                            <span>Completed May 2022</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                                <div class="project"
                                     style="background-image: url(images/projects/cartoonworld/thumbnail.png);">
                                     <div class="desc">
                                         <div class="con">
@@ -456,7 +469,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                            <div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
                                 <div class="project"
                                     style="background-image: url(images/projects/raytracer/thumbnail.png);">
                                     <div class="desc">
@@ -469,7 +482,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+                            <div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
                                 <div class="project"
                                     style="background-image: url(images/projects/dashstarter/thumbnail.png);">
                                     <div class="desc">
@@ -483,7 +496,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+                            <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                 <div class="project"
                                     style="background-image: url(images/projects/flappybird/thumbnail.png);">
                                     <div class="desc">
@@ -497,7 +510,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                            <!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                 <div class="project"
                                     style="background-image: url(images/projects/tetris/thumbnail.png);">
                                     <div class="desc">
@@ -508,7 +521,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                                 <div class="project"
@@ -542,7 +555,7 @@
                                 <div class="colorlib-feature colorlib-feature-sm animate-box"
                                     data-animate-effect="fadeInLeft">
                                     <div class="colorlib-icon">
-                                        <i class="icon-globe-outline"></i>
+                                        <i class="icon-mail"></i>
                                     </div>
                                     <div class="colorlib-text">
                                         <p><a href="mailto: mehekj2020@gmail.com">mehekj2020@gmail.com</a></p>
