more resume updates

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                                 New Jersey at Brown University working towards my Bachelor of Science
                                                 degree in computer science with a focuses in Visual Computing
                                                 and Artificial Intelligence/Machine Learning. At Brown, I am currently
-                                                the lead research assistant of the Dash project group and a teaching
+                                                a lead research assistant of the Dash project group and a teaching
                                                 assistant for CSCI 1230, Brown's undergraduate computer graphics course.
                                             </p>
 
@@ -261,10 +261,10 @@
                                                                     <br />GPA: 4.0/4.0</strong></p>
                                                         </div>
                                                         <div class="col-md-6">
-                                                            <p>Relevant coursework: Computer Graphics, Computer Vision,
-                                                                Computer Systems, Algorithms and Data Structures,
-                                                                Object-Oriented Programming, Discrete Structures
-                                                                and Probability, Linear Algebra, Statistical Inference
+                                                            <p>Relevant coursework: Computer Systems, Algorithms and
+                                                                Data Structures, Object-Oriented Programming, Computer
+                                                                Graphics, Computer Vision, Discrete Structures and
+                                                                Probability, Linear Algebra, Statistical Inference
                                                             </p>
                                                         </div>
                                                     </div>
@@ -322,13 +322,16 @@
                                                         target="_blank">Student Research Lead, Dash Project Team</a>
                                                     <span>June 2022 - Present</span>
                                                 </h2>
-                                                <h3>Brown University Graphics Group <span>Providence, RI</span>
+                                                <h3>Brown University, Visual Computing Group <span>Providence, RI</span>
                                                 </h3>
                                                 <p>
                                                     Lead a team of research assistants in building a browser-based
                                                     hypermedia system using the MERN stack and Typescript <br />
-                                                    Delegate coding tasks, oversee weekly progress meetings and
-                                                    codebase updates, execute UI changes, and perform user testing
+                                                    Delegate coding tasks, oversee weekly meetings and codebase updates,
+                                                    execute UI changes, and perform user testing <br />
+                                                    Instituted a new system of peer code reviews to streamline the
+                                                    process of verifying updates pushed for production
+
                                                 </p>
                                                 <h2><a href="https://brown-dash.github.io/Dash-Documentation/"
                                                         target="_blank">Undergraduate Research Assistant, Dash Project
@@ -357,10 +360,11 @@
                                                         Assistant</a> <span>June 2022 - Present</span></h2>
                                                 <h3>Brown University, CSCI 1230 <span>Providence, RI</span></h3>
                                                 <p>
-                                                    Develop course content for Brown's CSCI 1230 computer graphics
-                                                    course <br />
-                                                    Write new assignment code (C++ and OpenGL) and specifications to
-                                                    teach computer graphics skills
+                                                    Develop assignment code and specifications for Brown's CSCI 1230
+                                                    computer graphics course in C++ and OpenGL <br />
+                                                    Led a team of TAs in rewriting multiple course projects and created
+                                                    a new assignment with an interactive OpenGL demo <br />
+
 
                                                 </p>
                                             </div>
@@ -373,7 +377,7 @@
                                                 <i class="icon-pen2"></i>
                                             </div>
                                             <div class="timeline-label">
-                                                <h2><a>Grader</a> <span>August 2017 - January 2021</span></h2>
+                                                <h2><a>Tutor</a> <span>August 2017 - January 2021</span></h2>
                                                 <h3>Kumon Math and Reading Center <span>Emerson, NJ</span></h3>
                                                 <p>
                                                     Guided students ages 3-16 through math, reading, and writing
