added blender page

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 data-animate-effect="fadeInLeft">
                                 <span class="heading-meta">My Specialty</span>
                                 <h2 class="colorlib-heading animate-box">My Skills</h2>
-                                <p>Currently learning: Blender, UI/UX design</p>
+                                <p>Currently learning: <a href="projects/blender.html">Blender</a>, UI/UX design</p>
                             </div>
                         </div>
 
